# my_recipe

./: Dockerfile  main.py  pyproject.toml
my_receipe/: main.py
my_receipe/configs/: settings.py
my_receipe/models/: model_selector.py
my_receipe/prompts/: prompt_generator.py
my_receipe/schemas/: recipe_schema.py
my_receipe/services/: ollama_service.py
my_recipe/: README.md  gradio_app.py  main.py  pyproject.toml
my_recipe/configs/: stream_response.py
my_recipe/experiments/: rough.py
my_recipe/models/: ollama_model_checker.py
my_recipe/prompts/: base_prompt.py
my_recipe/routes/: recipe_routes.py
my_recipe/schemas/: recipe_schema.py
my_recipe/services/: ollama_service.py
notebooks/: abc.ipynb
