[project]
name = "my-receipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ollama>=0.4.8",
    "pydantic>=2.11.3",
]

[tool.uv.workspace]
members = [
    "my_receipe",
]
